tdf#164140 sw: Fix invalid string indices in kashida justification

During layout, Writer has to mark certain lines and positions as
ineligible for kashida. These lines and positions are stored using
string indices on a per-paragraph basis.

This change fixes a bug causing corruption of these kashida
ineligibility indices during editing. Writer tries to reuse the existing
layouts of lines whenever possible. Since these kashida indices are
computed at the same time as layout, and the paragraph-relative subrange
of a line may be different after inserting or deleting text in previous
lines, the stored indices would point to different parts of the
paragraph string than intended.

Change-Id: Idb67d0a217841dc0743ed716ef8214d10e7b560b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182286
Tested-by: Jenkins
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182335