sw/qa/extras/uiwriter/uiwriter9.cxx
@@ -38,6 +38,8 @@
 #include <swacorr.hxx>
 #include <sfx2/linkmgr.hxx>
 
+#include <scriptinfo.hxx>
+#include <txtfrm.hxx>
 #include <view.hxx>
 #include <wrtsh.hxx>
 #include <unotxdoc.hxx>
@@ -1038,6 +1040,55 @@ CPPUNIT_TEST_FIXTURE(SwUiWriterTest9, testTdf162195)
     CPPUNIT_ASSERT_EQUAL(u"Index of Tables" SAL_NEWLINE_STRING "Table1\t1" SAL_NEWLINE_STRING
                          "Table2\t1"_ustr,
                          xTables->getAnchor()->getString());
+}
+
+CPPUNIT_TEST_FIXTURE(SwUiWriterTest9, testTdf164140)
+{
+    createSwDoc("tdf164140.fodt");
+    SwWrtShell* pWrtShell = getSwDocShell()->GetWrtShell();
+
+    SwTextFrame& pTextFrame
+        = dynamic_cast<SwTextFrame&>(*pWrtShell->GetLayout()->GetLower()->GetLower()->GetLower());
+    const SwScriptInfo* pSI = pTextFrame.GetScriptInfo();
+
+    // Prior to editing, the three complete lines should be flagged as no-kashida:
+    auto stBeforeLines = pSI->GetNoKashidaLines();
+
+    CPPUNIT_ASSERT_EQUAL(size_t(4), stBeforeLines.size());
+    auto stBeforeIt = stBeforeLines.begin();
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(0), std::get<0>(*stBeforeIt));
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(88), std::get<1>(*stBeforeIt));
+    ++stBeforeIt;
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(88), std::get<0>(*stBeforeIt));
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(180), std::get<1>(*stBeforeIt));
+    ++stBeforeIt;
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(180), std::get<0>(*stBeforeIt));
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(269), std::get<1>(*stBeforeIt));
+    ++stBeforeIt;
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(269), std::get<0>(*stBeforeIt));
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(312), std::get<1>(*stBeforeIt));
+
+    // Insert text at the beginning of the document
+    pWrtShell->Insert(u"A"_ustr);
+
+    // After editing, the three complete lines should still be flagged as no-kashida
+    auto stAfterLines = pSI->GetNoKashidaLines();
+
+    // Without the fix, this will be 2
+    CPPUNIT_ASSERT_EQUAL(size_t(4), stAfterLines.size());
+
+    auto stAfterIt = stAfterLines.begin();
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(0), std::get<0>(*stAfterIt));
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(89), std::get<1>(*stAfterIt));
+    ++stAfterIt;
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(89), std::get<0>(*stAfterIt));
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(181), std::get<1>(*stAfterIt));
+    ++stAfterIt;
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(181), std::get<0>(*stAfterIt));
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(270), std::get<1>(*stAfterIt));
+    ++stAfterIt;
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(270), std::get<0>(*stAfterIt));
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(313), std::get<1>(*stAfterIt));
 }
 
 } // end of anonymous namespace
